--- a/erizo/src/test/log4cxx.properties
+++ b/erizo/src/test/log4cxx.properties
@@ -10,7 +10,7 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d  - %p [%t] %c - %m%n
 
 log4j.logger.DtlsTransport=ERROR
-log4j.logger.NiceConnection=ERROR
+log4j.logger.LibNiceConnection=ERROR
 log4j.logger.OneToManyProcessor=ERROR
 log4j.logger.Resender=ERROR
 log4j.logger.SdpInfo=ERROR
