--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -10,7 +10,7 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d  - %p [%t] %c - %m%n
 
 log4j.logger.DtlsTransport=DEBUG
-log4j.logger.NiceConnection=DEBUG
+log4j.logger.LibNiceConnection=DEBUG
 log4j.logger.OneToManyProcessor=WARN
 log4j.logger.Resender=WARN
 log4j.logger.SdpInfo=WARN
